--- a/src/main/resources/templates/addmood.html
+++ b/src/main/resources/templates/addmood.html
@@ -1,25 +1,13 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <title>Mood tracker</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css"
 	th:href="@{/css/bootstrap.min.css}" />
-<link type="text/css" rel="stylesheet"
-	href="/css/bootstrap-datepicker.min.css"
-	th:href="@{/css/bootstrap-datepicker.min.css}" />
-<script src="/js/bootstrap-datepicker"></script>
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="/js/bootstrap-datepicker.min"></script>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/css/bootstrap.min.css"
-	rel="stylesheet">
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
 
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 
 
 </head>
@@ -35,7 +23,19 @@
 				method="post">
 				<tr>
 					<td><label for="moodValue">Moodvalue (1-5)</label></td>
-					<td><input type="text" th:field="*{moodValue}"> </i></td>
+					
+					<td><select id="moodValue" th:field="*{moodValue}"> 
+					
+					<option value=1>1</option>
+					<option value=2>2</option>
+					<option value=3>3</option>
+					<option value=4>4</option>
+				<option value=5>5</option>
+
+
+					</select> </td>
+					
+					
 
 
 				</tr>
@@ -47,8 +47,8 @@
 				</tr>
 
 				<tr>
-					<td><label for="date">Date (tähän datenow()?)</label></td>
-					<td><input type="datetime" th:field="*{date}"></i></td>
+					<td><label for="date">Date</label></td>
+					<td><input type="date" th:field="*{date}"/></td>
 
 
 				</tr>
